--- a/index.html
+++ b/index.html
@@ -13,13 +13,36 @@
         </div>
     </header>
     <main>
-        <div class = chast>Часть 2 <br>
+        <div class="chast"> Часть 1
+            <div class="work">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+        </div>
+        <div class = chast>Часть 2
+            <div class="work">
             <ul>
             <li><button><a href="/dz/dz 1.html">Задача 14</a></button></li>
             <li><button><a href="/dz/dz 2.html">Задача 15</a></button></li>
             <li><button><a href="/dz/dz 3.html">Задача 16</a></button></li>
             <li><button><a href="/dz/dz 4.html">Задача 17</a></button></li>
             </ul>
+        </div>
         </div>
     </main>
     <footer>
