--- a/index.html
+++ b/index.html
@@ -13,34 +13,48 @@
         </div>
     </header>
     <main>
-        <div class="chast"> Часть 1
+        <div class="chast">
+            Часть 1           
             <div class="work">
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><button><a href="/dz_chast_1/dz_1.html">Задача 1</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_2.html">Задача 2</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_3.html">Задача 3</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_4.html">Задача 4</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_5.html">Задача 5</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_6.html">Задача 6</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_7.html">Задача 7</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_8.html">Задача 8</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_9.html">Задача 9</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_10.html">Задача 10</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_11.html">Задача 11</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_12.html">Задача 12</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_13.html">Задача 13</a></button></li>
+                    <li><button><a href="/dz_chast_1/dz_14.html">Задача 14 (не сделано)</a></button></li>
                 </ul>
             </div>
-
+        </div>
         </div>
         <div class = chast>Часть 2
             <div class="work">
             <ul>
-            <li><button><a href="/dz/dz 1.html">Задача 14</a></button></li>
-            <li><button><a href="/dz/dz 2.html">Задача 15</a></button></li>
-            <li><button><a href="/dz/dz 3.html">Задача 16</a></button></li>
-            <li><button><a href="/dz/dz 4.html">Задача 17</a></button></li>
+                <li><button><a href="">Задача 1</a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+                <li><button><a href=""></a></button></li>
+            <li><button><a href="/dz_chast_2/dz 1.html">Задача 14</a></button></li>
+            <li><button><a href="/dz_chast_2/dz 2.html">Задача 15</a></button></li>
+            <li><button><a href="/dz_chast_2/dz 3.html">Задача 16</a></button></li>
+            <li><button><a href="/dz_chast_2/dz 4.html">Задача 17</a></button></li>
             </ul>
         </div>
         </div>
