--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
         <div class = chast>Часть 2
             <div class="work">
             <ul>
-                <li><button><a href="">Задача 1</a></button></li>
-                <li><button><a href="">Задача 2</a></button></li>
-                <li><button><a href="">Задача 3</a></button></li>
-                <li><button><a href="">Задача 4</a></button></li>
-                <li><button><a href="">Задача 5</a></button></li>
-                <li><button><a href="">Задача 6</a></button></li>
-                <li><button><a href="">Задача 7</a></button></li>
-                <li><button><a href="">Задача 8</a></button></li>
-                <li><button><a href="">Задача 9</a></button></li>
-                <li><button><a href="">Задача 10</a></button></li>
-                <li><button><a href="">Задача 11</a></button></li>
-                <li><button><a href="">Задача 12</a></button></li>
-                <li><button><a href="">Задача 13</a></button></li>
-            <li><button><a href="/dz_chast_2/dz 1.html">Задача 14</a></button></li>
-            <li><button><a href="/dz_chast_2/dz 2.html">Задача 15</a></button></li>
-            <li><button><a href="/dz_chast_2/dz 3.html">Задача 16</a></button></li>
-            <li><button><a href="/dz_chast_2/dz 4.html">Задача 17</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 1.html">Задача 1</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 2</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 3</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 4</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 5</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 6</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 7</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 8</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 9</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 10</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 11</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 12</a></button></li>
+                <li><button><a href="/dz_chast_2/">Задача 13</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 1.html">Задача 14</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 2.html">Задача 15</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 3.html">Задача 16</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 4.html">Задача 17</a></button></li>
             </ul>
         </div>
         </div>
