--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                 <li><button><a href="/dz_chast_2/dz 15.html">Задача 15</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 16.html">Задача 16</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 17.html">Задача 17</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 18.html">Задача 18</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 19.html">Задача 19</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 20.html">Задача 20</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 21.html">Задача 21</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 22.html">Задача 22</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 23.html">Задача 23</a></button></li>
+
             </ul>
         </div>
         </div>
