--- a/dz_chast_2/dz 19.html
+++ b/dz_chast_2/dz 19.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="/dz_chast_2/style_for_dz/style_dz19.css">
 </head>
 <body>
-    
+    <div class="parent">
+        <div class="div1"> 150 x 150</div>
+        <div class="div2"> 150 x 150</div>
+        <div class="div3"> 150 x 150</div>
+        <div class="div4"> 150 x 150</div>
+        <div class="div5"> 150 x 150</div>
+        <div class="div6"> 150 x 150</div>
+        </div>
+    <button><a href="/index.html"><h3> ← назад</a></h3></button>
 </body>
 </html>
