--- a/dz_chast_2/dz 23.html
+++ b/dz_chast_2/dz 23.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/dz_chast_2/style_for_dz/style_dz20.css">
+    <link rel="stylesheet" href="/dz_chast_2/style_for_dz/style_dz23.css">
 </head>
 <body>
-    <div class="block">
-        <div class="block1"></div>
-        <div class="block2"></div>
-        <div class="block3"></div>
-        <div class="block4"></div>
-        <div class="block5"></div>
+    <div class="wrap">
+      <div class="block left"></div>
+      <div class="block center"></div>
+      <div class="block right"></div>
     </div>
     <button><a href="/index.html"><h3> ← назад</a></h3></button>
 </body>
