--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                 <li><button><a href="/dz_chast_2/dz 21.html">Задача 21</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 22.html">Задача 22</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 23.html">Задача 23</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 24.html">Задача 24</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 25.html">Задача 25</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 26.html">Задача 26</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 27.html">Задача 27</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 28.html">Задача 28 (пока не сделано)</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 29.html">Задача 29 (пока не сделано)</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 30.html">Задача 30 (пока не сделано)</a></button></li>
 
             </ul>
         </div>
