--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <li><button><a href="/dz_chast_2/dz 7.html">Задача 7</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 8.html">Задача 8</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 9.html">Задача 9</a></button></li>
-                <li><button><a href="/dz_chast_2/">Задача 10 (пока не сделано)</a></button></li>
-                <li><button><a href="/dz_chast_2/">Задача 11 (пока не сделано)</a></button></li>
-                <li><button><a href="/dz_chast_2/">Задача 12 (пока не сделано)</a></button></li>
+                <li><button><a href="#">Задача 10 (пока не сделано)</a></button></li>
+                <li><button><a href="#">Задача 11 (пока не сделано)</a></button></li>
+                <li><button><a href="#">Задача 12 (пока не сделано)</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 13.html">Задача 13</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 14.html">Задача 14</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 15.html">Задача 15</a></button></li>
