--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     </header>
     <main>
         <h1>Домашние задания</h1>
-        <div class="chast">
-            Часть 1           
-            <div class="work">
+        <div id= "chast1" class="chast">
+            <h2>Часть 1</h2>
                 <ul>
                     <li><button><a href="/dz_chast_1/dz_1.html">Задача 1</a></button></li>
                     <li><button><a href="/dz_chast_1/dz_2.html">Задача 2</a></button></li>
@@ -39,11 +38,10 @@
                     <li><button><a href="/dz_chast_1/dz_13.html">Задача 13</a></button></li>
                     <li><button><a href="/dz_chast_1/dz_14.html">Задача 14 (не сделано)</a></button></li>
                 </ul>
-            </div>
         </div>
         </div>
-        <div class = chast>Часть 2
-            <div class="work">
+        <div id="chast2" class = chast>
+            <h2>Часть 2</h2>
             <ul>
                 <li><button><a href="/dz_chast_2/dz 1.html">Задача 1</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 2.html">Задача 2</a></button></li>
@@ -54,9 +52,9 @@
                 <li><button><a href="/dz_chast_2/dz 7.html">Задача 7</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 8.html">Задача 8</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 9.html">Задача 9</a></button></li>
-                <li><button><a href="#">Задача 10 (пока не сделано)</a></button></li>
-                <li><button><a href="#">Задача 11 (пока не сделано)</a></button></li>
-                <li><button><a href="#">Задача 12 (пока не сделано)</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 10.html">Задача 10</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 11.html">Задача 11</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 12.html">Задача 12 (пока не сделано)</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 13.html">Задача 13</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 14.html">Задача 14</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 15.html">Задача 15</a></button></li>
@@ -78,17 +76,9 @@
 
             </ul>
         </div>
-        </div>
     </main>
     <footer>
-        <h3>2024</h3>
-        <nav>
-            <a href="#chast1">Часть 1</a>
-            <a href="#chast2">Часть 2</a>
-            <a href="#chast3">Часть 3</a>
-            <a href="#chast4">Часть 4</a>
-        </nav>
-        <a href="#" class="foot-up"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.8543 11.9741L16.2686 10.5599L12.0259 6.31724L7.78327 10.5599L9.19749 11.9741L11.0259 10.1457V17.6828H13.0259V10.1457L14.8543 11.9741Z" fill="currentColor" /><path fill-rule="evenodd" clip-rule="evenodd" d="M1 19C1 21.2091 2.79086 23 5 23H19C21.2091 23 23 21.2091 23 19V5C23 2.79086 21.2091 1 19 1H5C2.79086 1 1 2.79086 1 5V19ZM5 21H19C20.1046 21 21 20.1046 21 19V5C21 3.89543 20.1046 3 19 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21Z" fill="currentColor" /></svg></a>
+
     </footer>
 </body>
 </html>
