--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             Майфат Александр
         </div>
         <nav>
-            <a href="#chast1">Часть 1</a>
-            <a href="#chast2">Часть 2</a>
-            <a href="#chast3">Часть 3</a>
-            <a href="#chast4">Часть 4</a>
+            <a href="#chast1">Домашние задания</a>
+            <a href="#chast2">Вёрстка</a>
+            <a href="#chast3">Модули</a>
+            <a href="#chast4">Что-то</a>
         </nav>
     </header>
     <main>
-        <h1>Домашние задания</h1>
+        <h1>Домашние задания из сайта</h1>
         <div id= "chast1" class="chast">
             <h2>Часть 1</h2>
                 <ul>
@@ -54,7 +54,7 @@
                 <li><button><a href="/dz_chast_2/dz 9.html">Задача 9</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 10.html">Задача 10</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 11.html">Задача 11</a></button></li>
-                <li><button><a href="/dz_chast_2/dz 12.html">Задача 12 (пока не сделано)</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 12.html">Задача 12</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 13.html">Задача 13</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 14.html">Задача 14</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 15.html">Задача 15</a></button></li>
@@ -70,9 +70,9 @@
                 <li><button><a href="/dz_chast_2/dz 25.html">Задача 25</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 26.html">Задача 26</a></button></li>
                 <li><button><a href="/dz_chast_2/dz 27.html">Задача 27</a></button></li>
-                <li><button><a href="/dz_chast_2/dz 28.html">Задача 28 (пока не сделано)</a></button></li>
-                <li><button><a href="/dz_chast_2/dz 29.html">Задача 29 (пока не сделано)</a></button></li>
-                <li><button><a href="/dz_chast_2/dz 30.html">Задача 30 (пока не сделано)</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 28.html">Задача 28</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 29.html">Задача 29</a></button></li>
+                <li><button><a href="/dz_chast_2/dz 30.html">Задача 30</a></button></li>
 
             </ul>
         </div>
