--- a/dz_chast_2/dz 29.html
+++ b/dz_chast_2/dz 29.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/dz_chast_2/style_for_dz/style_dz29.css">
 </head>
 <body>
+	<nav>
+		<ul class="main-menu">
+			<li><a href="#">Научное наследие</a></li>
+			<li class="active"><input type="checkbox" id="active" checked><a href="#"><label for="active">Теория</label></a>
+			    <ul class="submenu">
+					<li><input type="checkbox" id="box_1"><a href="#"><label for="box_1">Отдельные издания</label></a></li>
+					<li><input type="checkbox" id="box_2"><a href="#"><label for="box_2">Труды РАО</label></a></li>
+			<li><input type="checkbox" id="box_3"><a href="#"><label for="box_3">Диссертиционные материалы</label></a>
+			    	</li>
+			    </ul>
+			</li>
+			<li><a href="#">Практика</a></li>
+			<li><a href="#">История</a></li>
+			<li><a href="#">Периодические издания</a></li>
+			<li><a href="#">Справочные материалы</a></li>
+			<li><a href="#">Библиография</a></li>
+			<li><a href="#">Материалы научно-практических мероприятий</a></li>
+		</ul>
+	</nav>
     <button><a href="/index.html"><h3> ← назад</a></h3></button>
-    
 </body>
 </html>
