--- a/Module/module.html
+++ b/Module/module.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Verst/style/style_module2_week2.css">
+    <link rel="stylesheet" href="/Module/style/style_module.css">
 </head>
 <body>
     <header>
@@ -12,14 +12,19 @@
             Майфат Александр
         </div>
         <nav>
-            <a href="#chast1">Домашние задания</a>
+            <a href="/index.html">Домашние задания</a>
             <a href="#chast2">Вёрстка</a>
-            <a href="#chast3">Модули</a>
+            <a href="#">Модули</a>
             <a href="#chast4">Что-то</a>
         </nav>
     </header>
     <main>
-        
+        <input type="checkbox" class = module>Module 2 week 2</input>
+        <ul class="module2">
+            <li><a href="#">Задание 1</a></li>
+            <li><a href="#">Задание 2</a></li>
+            <li><a href="#">Задание 3</a></li>
+        </ul>
     </main>
 </body>
 </html>
