--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             Майфат Александр
         </div>
         <nav>
-            <a href="#chast1">Домашние задания</a>
-            <a href="#chast2">Вёрстка</a>
-            <a href="#chast3">Модули</a>
+            <a href="#">Домашние задания</a>
+            <a href="#">Вёрстка</a>
+            <a href="/Module/module.html">Модули</a>
             <a href="#chast4">Что-то</a>
         </nav>
     </header>
