--- a/dz_chast_1/dz_1.html
+++ b/dz_chast_1/dz_1.html
@@ -10,6 +10,6 @@
     Мириады маленьких дел<br>Пьют по капле гаснущий день,<br> А <em>дела большие</em> сушит жажда.<br>
     Оставляя все на «потом»,<br> Прозреваем задним числом,<br>
     Только день <strong>не повторится</strong> дважды.<br> <p>И.Тальков</p>
-    <button><a href="/index.html">Назад</a></button>
+    <button><a href="../index.html">Назад</a></button>
 </body>
 </html>
