--- a/dz_js/html/1js.html
+++ b/dz_js/html/1js.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "../dz_js/js/1work.JavaSctipt"></script>
+    <script src = "/dz_js/js/1work.js"></script>
+    
     <button><a href="/index.html">Назад</a></button>
 </body>
 </html>
