--- a/index.html
+++ b/index.html
@@ -77,38 +77,38 @@
             </ul>
         </div>
         <div id="java" class = chast>
-            <h2>Часть 2</h2>
+            <h2>JavaScript</h2>
             <ul>
-                <li><button><a href="/dz_js/js/1work.JS">Неделя 1</a></button></li>
-                <li><button><a href="/dz_js/">Задача 2</a></button></li>
-                <li><button><a href="/dz_js/">Задача 3</a></button></li>
-                <li><button><a href="/dz_js/">Задача 4</a></button></li>
-                <li><button><a href="/dz_js/">Задача 5</a></button></li>
-                <li><button><a href="/dz_js/">Задача 6</a></button></li>
-                <li><button><a href="/dz_js/">Задача 7</a></button></li>
-                <li><button><a href="/dz_js/">Задача 8</a></button></li>
-                <li><button><a href="/dz_js/">Задача 9</a></button></li>
-                <li><button><a href="/dz_js/">Задача 10</a></button></li>
-                <li><button><a href="/dz_js/">Задача 11</a></button></li>
-                <li><button><a href="/dz_js/">Задача 12</a></button></li>
-                <li><button><a href="/dz_js/">Задача 13</a></button></li>
-                <li><button><a href="/dz_js/">Задача 14</a></button></li>
-                <li><button><a href="/dz_js/">Задача 15</a></button></li>
-                <li><button><a href="/dz_js/">Задача 16</a></button></li>
-                <li><button><a href="/dz_js/">Задача 17</a></button></li>
-                <li><button><a href="/dz_js/">Задача 18</a></button></li>
-                <li><button><a href="/dz_js/">Задача 19</a></button></li>
-                <li><button><a href="/dz_js/">Задача 20</a></button></li>
-                <li><button><a href="/dz_js/">Задача 21</a></button></li>
-                <li><button><a href="/dz_js/">Задача 22</a></button></li>
-                <li><button><a href="/dz_js/">Задача 23</a></button></li>
-                <li><button><a href="/dz_js/">Задача 24</a></button></li>
-                <li><button><a href="/dz_js/">Задача 25</a></button></li>
-                <li><button><a href="/dz_js/">Задача 26</a></button></li>
-                <li><button><a href="/dz_js/">Задача 27</a></button></li>
-                <li><button><a href="/dz_js/">Задача 28</a></button></li>
-                <li><button><a href="/dz_js/">Задача 29</a></button></li>
-                <li><button><a href="/dz_js/">Задача 30</a></button></li>
+                <li><button><a href="/dz_js/html/1js.html">Неделя 1</a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/"></a></button></li>
 
             </ul>
         </div>
