--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <li><button><a href="/dz_js/html/2js.html">Неделя 3</a></button></li>
                 <li><button><a href="/dz_js/"></a></button></li>
                 <li><button><a href="/dz_js/"></a></button></li>
-                <li><button><a href="/dz_js/"></a></button></li>
+                <li><button><a href="/dz_js/html/10js.html">наследование классы</a></button></li>
                 <li><button><a href="/dz_js/"></a></button></li>
                 <li><button><a href="/dz_js/"></a></button></li>
                 <li><button><a href="/dz_js/"></a></button></li>
